** Known BREAKING CHANGES from NH3.1.0.GA to NH3.2.0.GA

	##### Possible Breaking Changes #####
		* [NH-2550] - Allow public access to FieldInterceptor Session (IFieldInterceptor changed)
		* [NH-2593] - Form Microsoft SQL Server the default batch-size (adonet.batch_size) is set to 20 where not explicit defined in the session-factory configuration

Build 3.1.0.GA (rev5425)
=============================

** Known BREAKING CHANGES from NH3.0.0.GA to NH3.1.0.GA

	##### Design time #####
		* [NH-2481] - Deprecated: ISession.SaveOrUpdateCopy methods - use ISession.Merge methods instead

	##### Run time #####
		* [NH-2481] - An exception will now be thrown when an entity references a transient entity and cascade="merge|all" is not configured on the association

	##### Possible Breaking Changes #####
		* [NH-2461] - Signature change for IQuery.SetParameterList
		* [NH-2556] - NH is too tolerante to incorrect naming when access="field.XXX" is used

** Sub-task
    * [NH-2525] - Wrong parameter used for limit claues in MySQL

** Bug
    * [NH-1985] - NHibernate is allowing deletion of immutable objects
    * [NH-2037] - Reattaching an entity with many-to-one inside a natural-id
    * [NH-2130] - Reporting query containing sum crashes when there are no rows
    * [NH-2179] - String constants are not useable in Linq query projection
    * [NH-2203] - problem with orderby in linq query
    * [NH-2280] - LINQ Query on Composite key creates invalid SQL
    * [NH-2311] - .Any() extension method does not work in most cases
    * [NH-2362] - GroupBy with multiple fields fails with exception
    * [NH-2375] - OfType with a where clause fails with a NotSupportedException
    * [NH-2381] - Fetch clause fails with a NotSupportedException
    * [NH-2386] - Unecessary update / invalid SQL generated when collection updated with a versioned (generated) parent entity
    * [NH-2400] - Linq query fail when using contains from an empty Collection