@@ -58,7 +58,6 @@
 			<property name="connection.connection_string">Server=localhost\sqlexpress;initial catalog=nhibernate;Integrated Security=SSPI</property>
 
 			<property name="show_sql">false</property>
-			<property name="use_outer_join">true</property>
 			<property name="command_timeout">444</property>
 			<property name="query.substitutions">true 1, false 0, yes 'Y', no 'N'</property>
 			<property name="adonet.wrap_result_sets">false</property>
