@@ -102,7 +102,6 @@
 								<xs:enumeration value="command_timeout" />
 								<xs:enumeration value="adonet.batch_size" />
 								<xs:enumeration value="use_proxy_validator" />
-								<xs:enumeration value="use_outer_join" />
 								<xs:enumeration value="xml.output_stylesheet" />
 								<xs:enumeration value="generate_statistics" />
 								<xs:enumeration value="query.startup_check" />
